Fix the icon not showing up for new .column-link__icon in v4.4.0-beta.1+mementomods-2025-06-14

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -3379,7 +3379,8 @@ body .compose-form .compose-form__uploads {
 .layout-multiple-columns .account__header__tabs__buttons .icon.icon-user-plus path,
 .layout-multiple-columns .notification__filter-bar .icon.icon-user-plus path,
 .layout-multiple-columns .account__header__tabs__buttons .icon.icon-tasks path,
-.layout-multiple-columns .notification__filter-bar .icon.icon-tasks path {
+.layout-multiple-columns .notification__filter-bar .icon.icon-tasks path,
+.layout-multiple-columns .column-link .column-link__icon path {
   display: block;
 }
 
